--- a/Time_Series_Assignment/Tex/ref.bib
+++ b/Time_Series_Assignment/Tex/ref.bib
@@ -1,1 +1,28 @@
+@article{mainpaper,
+  title={Estimation of the equilibrium real exchange rate for South Africa 1},
+  author={MacDonald, Ronald and Ricci, Luca Antonio},
+  journal={South African Journal of Economics},
+  volume={72},
+  number={2},
+  pages={282--304},
+  year={2004},
+  publisher={Wiley Online Library}
+}
 
+@article{duples,
+  title={Exogeneity in a recent exchange rate model: A response to MacDonald and Ricci},
+  author={Du Plessis, Stan A},
+  journal={South African Journal of Economics},
+  volume={73},
+  number={4},
+  pages={741--746},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
+@book{johansenMLE,
+  title={Likelihood-based inference in cointegrated vector autoregressive models},
+  author={Johansen, S{\o}ren},
+  year={1995},
+  publisher={OUP Oxford}
+}
