--- a/Time_Series_Assignment/Tex/ref.bib
+++ b/Time_Series_Assignment/Tex/ref.bib
@@ -26,3 +26,17 @@
   year={1995},
   publisher={OUP Oxford}
 }
+
+@article{ppp,
+	title = {Purchasing {Power} {Parity} and the {Real} {Exchange} {Rate}},
+	volume = {49},
+	issn = {1020-7635},
+	url = {https://www.jstor.org/stable/3872492},
+	abstract = {We assess the progress made by the profession in understanding real exchange rate behavior through a selective and critical, but nonetheless expository, review of the literature. Our reading of the literature leads us to the main conclusions that purchasing power parity might be viewed as a valid long-run international parity condition when applied to bilateral exchange rates obtaining among major industrialized countries, and that mean reversion in real exchange rates displays significant nonlinearities. However, further work investigating the effects of real shocks on the long-run equilibrium level also seems warranted.},
+	number = {1},
+	urldate = {2022-06-27},
+	journal = {IMF Staff Papers},
+	author = {Sarno, Lucio and Taylor, Mark P.},
+	year = {2002},
+	pages = {65--105},
+}
